-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 21, 22
-
Component/s: client-libs
-
b05
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8323836 | 22.0.1 | Sergey Bylokhov | P4 | Resolved | Fixed | b02 |
| JDK-8325160 | 21.0.4-oracle | Dmitry Markov | P4 | Resolved | Fixed | b01 |
| JDK-8327159 | 21.0.4 | Sergey Bylokhov | P4 | Resolved | Fixed | b01 |
| JDK-8325357 | 17.0.12-oracle | Dmitry Markov | P4 | Resolved | Fixed | b01 |
| JDK-8327160 | 17.0.12 | Sergey Bylokhov | P4 | Resolved | Fixed | b01 |
- if the number of extra channels in src and dst are different.
- If dst does not have an alpha but src has
- If src does not have an alpha but dst has
Exception does not occurred if the number of extra channels are the same(even if both are zero)
- backported by
-
JDK-8323836 Update the usage of cmsFLAGS_COPY_ALPHA
-
- Resolved
-
-
JDK-8325160 Update the usage of cmsFLAGS_COPY_ALPHA
-
- Resolved
-
-
JDK-8325357 Update the usage of cmsFLAGS_COPY_ALPHA
-
- Resolved
-
-
JDK-8327159 Update the usage of cmsFLAGS_COPY_ALPHA
-
- Resolved
-
-
JDK-8327160 Update the usage of cmsFLAGS_COPY_ALPHA
-
- Resolved
-
- blocks
-
JDK-8321489 Update LCMS to 2.16
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/ab602af4
-
Commit
openjdk/jdk21u-dev/ee6445c4
-
Commit
openjdk/jdk22u/ed269bf4
-
Commit
openjdk/jdk/aba19334
-
Review
openjdk/jdk17u-dev/2118
-
Review
openjdk/jdk21u-dev/156
-
Review
openjdk/jdk22u/23
-
Review
openjdk/jdk/17320