8323210: Update the usage of cmsFLAGS_COPY_ALPHA

Reviewed-by: phh
Backport-of: aba19334eaeb46d37169cddeef929b13e050a60e